# newt-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  T1-starter-report.md  TROUBLESHOOTING.md  pyproject.toml
.github/prompts/: onboarding-probe.md
.github/workflows/: onboarding-full-run.yml  purity.yml  test.yml
examples/: first_inference.py
scripts/: dry_run.py  smoke_cold_e2e.py  smoke_fixtures.py  smoke_infer.py
src/newt/: __init__.py  __main__.py  _credentials.py  _embodiment.py
src/newt/_cli/: __init__.py  episodes.py  finetune.py  login.py  logout.py  models.py  promote.py  record.py  run.py  skill.py  status.py  upgrade.py  upload.py
src/newt/_client/: mock_robot.py  real_widowx_robot.py  robot.py  run_robot_client.py
src/newt/_client/imitation_mirror/: __init__.py  config.py  config_loader.py  config_sections.py  network_client.py  robot.py  runtime.py  site_config.py
src/newt/_client/imitation_mirror/configs/: __init__.py  client_defaults.py
src/newt/_client/imitation_mirror/utils/: __init__.py  env_utils.py  geometry.py  trossen_bimanual_frames.py
src/newt/_translation/: __init__.py  widowx_aloha.py
src/newt/fixtures/: __init__.py
src/newt/fixtures/data/: pour_coffee_beans.npz
src/newt/recording/: __init__.py  _cloud_sink.py  _lantern.py  _proto.py  _seam.py  _session.py  _sink.py  _validate.py  _writer.py
src/newt/skills/newt-onboarding/: SKILL.md
src/newt/snapshots/: __init__.py
src/newt/snapshots/data/: cup_stacking.npz  red_cube.npz
src/newt/trossen/: __init__.py
tests/: test_bootstrap_url.py  test_cli_episodes.py  test_cli_finetune.py  test_cli_help_guard.py  test_cli_login.py  test_cli_logout.py  test_cli_models.py  test_cli_promote.py  test_cli_reference.py  test_cli_run.py  test_cli_run_selection.py  test_cli_skill.py  test_cli_status.py  test_cli_upgrade.py  test_cli_version.py  test_close_code_routing.py  test_cloud_sink.py  test_cold_start_honesty.py  test_contract.py  test_credential_resolution.py  test_degradation_warning.py  test_embodiment.py  test_endpoint_unavailable.py  test_golden.py  test_inference_response.py  test_no_sa_credential_in_tree.py  test_recording.py  test_recording_purity.py  test_recording_sink.py  test_registry_auth.py  test_robot_repr.py  test_rtc.py  test_snapshots.py  test_verifier_retry.py
tests/fixtures/: fake_source.py
