[project]
name = "newt"
version = "0.0.1"
description = "Python SDK for the New Theory inference API"
requires-python = ">=3.11"
dependencies = [
    "msgpack>=1.0",
    "numpy>=1.26",
    "httpx>=0.25",
    "websockets>=12.0",
    "pillow>=10.0",
]

[project.scripts]
newt = "newt._cli:main"

[project.optional-dependencies]
# Test deps — needed to run pytest tests/test_golden.py.
# Install: pip install -e ".[test]"
test = ["pytest>=8.0"]

# Hardware demo deps — client-side only; not needed for serve or library users.
# lerobot is a private fork; requires SSH key to github.com/new-theory-research.
# Install: pip install ".[hardware]"
hardware = [
    "lerobot @ git+ssh://git@github.com/new-theory-research/lerobot.git@50168c2a16dd4c67275f9918bf327c1513380061",
]

# Recording deps — for newt.recording.Session + `newt record` + `newt episodes`.
# Heavy and hardware-adjacent on purpose: kept OUT of core so `import newt` stays
# featherweight (brief-252 purity golden). Imported lazily; absent = a lantern
# naming this extra. Install: pip install "newt[recording]"
recording = [
    "mcap>=1.1,<2.0",
    "protobuf>=4.25,<6.0",
    "opencv-python>=4.8,<5.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required to allow `lerobot @ git+ssh://...` as a direct-URL dep in [hardware].
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/newt"]
