[project]
name = "newt"
version = "0.0.1"
description = "Python SDK for the New Theory inference API"
requires-python = ">=3.11"
dependencies = [
    "msgpack>=1.0",
    "numpy>=1.26",
    "httpx>=0.25",
    "websockets>=12.0",
    "pillow>=10.0",
]

[project.scripts]
newt = "newt._cli:main"

[project.optional-dependencies]
# Test deps — needed to run pytest tests/test_golden.py.
# Install: pip install -e ".[test]"
test = ["pytest>=8.0"]

# Hardware demo deps — client-side only; not needed for serve or library users.
# lerobot is a private fork; requires SSH key to github.com/new-theory-research.
# Install: pip install ".[hardware]"
hardware = [
    "lerobot @ git+ssh://git@github.com/new-theory-research/lerobot.git@50168c2a16dd4c67275f9918bf327c1513380061",
]

# Recording deps — for newt.recording.Session + `newt record` + `newt episodes`.
# Heavy and hardware-adjacent on purpose: kept OUT of core so `import newt` stays
# featherweight (brief-252 purity golden). Imported lazily; absent = a lantern
# naming this extra. Install: pip install "newt[recording]"
recording = [
    "mcap>=1.1,<2.0",
    "protobuf>=4.25,<6.0",
    "opencv-python>=4.8,<5.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "deptry>=0.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required to allow `lerobot @ git+ssh://...` as a direct-URL dep in [hardware].
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/newt"]

[tool.deptry]
# Scan tests too (default excludes them) — httpx/pytest are used there, not in src/.
exclude = ["\\.venv.*", "\\.direnv", "\\.git", "setup\\.py"]
known_first_party = ["newt"]

[tool.deptry.per_rule_ignores]
# lerobot: declared in the [hardware] extra for the robot-path integration;
# not imported by any current src/ or test code. sshtunnel/ml_collections were
# dropped entirely in brief-306: their only consumers (run_robot_client.py,
# imitation_mirror/) were deleted by brief-246.
# mcap/protobuf/opencv-python: [recording] extra, loaded via the lazy require()
# lantern in newt.recording (brief-267) — real usage deptry's static scan can't see.
DEP002 = ["lerobot", "mcap", "protobuf", "opencv-python"]
# typing_extensions: pre-existing Python<3.8 fallback import in _embodiment.py;
# not a declared dependency, out of scope for brief-306.
DEP003 = ["typing_extensions"]
